<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btn_login_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/login_1" />

    <Button
        android:id="@+id/btn_login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_1"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/login_2" />

    <Button
        android:id="@+id/btn_login_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_2"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/login_3" />

    <Button
        android:id="@+id/btn_login_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_3"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/login_4" />

    <Button
        android:id="@+id/btn_login_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_4"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/login_5" />
</RelativeLayout>