<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputLayoutUser"
            android:paddingTop="10dp"
            android:clipChildren="false"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/username"
                android:translationY="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/username_hint"
                android:background="@drawable/edit_text_shape"
                android:inputType="text"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputLayoutPassword"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:textColorHint="@color/black"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Password_hint"
                android:translationY="3dp"
                android:background="@drawable/edit_text_shape"
                android:inputType="textPassword"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_shape"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <!-- Link to Login Screen -->


    </LinearLayout>

</RelativeLayout>
